--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.juhchamp.kambaqrreaderlibraryproj">
+    package="com.kamba.kambaqrreaderlibraryproj">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KambaQrReaderLibraryProj">
-        <activity android:name=".ViewQrContentActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name="com.kamba.kambaqrreaderlibraryproj.ViewQrContentActivity" />
+        <activity android:name="com.kamba.kambaqrreaderlibraryproj.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
